[package]
name = "explany"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-cors = "0.6.1"
actix-service = "2.0.1"
actix-web = "4.0.0"
anyhow = "1.0.65"
base64 = "0.20.0-alpha.1"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-utils = "0.8.7"
derive_more = "0.99.17"
dotenv = "0.15.0"
failure = "0.1.8"
futures = "0.3.18"
image = "0.24.0"
jsonwebtoken = "8.0.0-beta.6"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
once_cell = "1.14.0"
paperclip = { version = "0.7.1", features = ["actix4", "uuid", "swagger-ui", "chrono"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
regex = "1.5.5"
rust-argon2 = "1.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "offline", "postgres", "macros", "chrono" ] }
tokio = { version = "1.14.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
